# pewpew

./: Cargo.toml
assets/FancyTank/: FancyTank.blend  body.glb  body.gltf  projectile.glb  projectile.gltf  turret.glb  turret.gltf
assets/tank/: body.gltf  turret.gltf
src/: auto_despawn.rs  main.rs  moving.rs  player_controller_configuration.rs  systems.rs
src/systems/: auto_despawn.rs  explosion.rs  game_assets.rs  mine.rs  mod.rs  movement_update.rs  player_control.rs  projectile.rs  tank.rs  turret.rs
