[package]
name = "pew-pew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.*", features = ["bevy_scene", "bevy_asset"] }
bevy-inspector-egui = "0.19.*"
bevy_rapier3d = {version="0.22.*", features = [ "simd-stable", "debug-render" ]}
