[package]
name = "pew-pew"
version = "0.1.0"
edition = "2021"
authors = ["Per B. Nielsen"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.*", features = ["bevy_scene", "bevy_asset"] }
bevy-inspector-egui = "0.*"
bevy_math = "0.13.0"
bevy_xpbd_3d = "0.*"
